--- a/nodeJS/src/scss/style.scss
+++ b/nodeJS/src/scss/style.scss
@@ -1,6 +1,6 @@
 @import '~react-md/src/scss/react-md';
 
-$md-light-theme: false; // optional for light theme
+$md-light-theme: true; // optional for light theme
 // $md-primary-color: $md-light-blue-500;
 // $md-secondary-color: $md-deep-orange-a-200;
 
@@ -10,12 +10,10 @@ $md-secondary-color: $md-deep-purple-a-200;
 @include react-md-everything;
 
 // Or for a subsection
-@include react-md-theme-everything($md-light-blue-500, $md-deep-orange-a-200, $md-light-theme, 'custom-theme');
+//@include react-md-theme-everything($md-primary-color, $md-secondary-color, $md-light-theme, 'custom-theme');
+
+@include react-md-theme-everything($md-primary-color, $md-secondary-color, false, 'dark');
 
 
 //Custom
-div {
-  p {
-    background-color:orange;
-  }
-}
+@import 'custom';
