--- a/nodeJS/src/scss/custom.scss
+++ b/nodeJS/src/scss/custom.scss
@@ -44,6 +44,62 @@ html, body {
   }
 }
 
+.comment-dialog {
+  width:600px !important;
+}
+
+.dialog-close-button {
+  position: fixed;
+  right: 24px;
+  top: 19px;
+}
+
+$comment-avatar-dimensions: 30px;
+
+.comment-avatar {
+  display:inline-block;
+  width: $comment-avatar-dimensions;
+  height: $comment-avatar-dimensions;
+  font-size: 16px !important;
+  vertical-align: top !important;
+}
+
+.comment-message {
+  float:none !important;
+  display:inline-block;
+  margin: 0px 0px 12px 8px !important;
+  vertical-align: top !important;
+  max-width: calc(100% - 8px - #{$comment-avatar-dimensions}) !important;
+  word-wrap: break-word;
+  background: rgb(249, 249, 249) !important;
+}
+
+.comment-info-wrapper{
+  float:right;
+}
+
+.comment-date {
+  float:left;
+  color: lightgray;
+  margin: 9px 6px 0px 6px;
+
+}
+
+.inline-block{
+  display:inline-block;
+}
+.number-of-likes{
+  float:right;
+  margin: 4px 6px 0px 3px;
+}
+
+.comment-like-button {
+  font-size:9px !important;
+  height:20px;
+  min-width: 63px;
+  padding: 5px 16px;
+}
+
 .chat-view {
 
   height:calc(100vh - 64px);
