make profile page, make shared, clean up scss

--- a/nodeJS/src/scss/custom.scss
+++ b/nodeJS/src/scss/custom.scss
@@ -1,52 +1,13 @@
+@import 'components/feed';
+@import 'components/comment';
+@import 'profile';
+@import 'chat';
+
 
 html, body {
   margin:0;
 }
 
-
-.post-create {
-  margin-bottom:16px;
-
-  .post-avatar {
-    margin-right:16px;
-  }
-
-  .post-input {
-    width:calc(100% - 104px);
-    display:inline-block;
-  }
-
-  @media screen and (min-width: 1025px) {
-    .post-input {
-      width:calc(100% - 96px);
-    }
-  }
-}
-
-.feed-body {
-  max-width:700px;
-  margin:0 auto;
-  padding-top:16px;
-
-  .feed-component {
-    margin-bottom:8px;
-  }
-}
-
-.comment-input {
-  display:inline-block;
-  width: calc(100% - 48px);
-}
-
-@media screen and (min-width: 1025px) {
-  .comment-input {
-    width:calc(100% - 40px);
-  }
-}
-
-.comment-dialog {
-  width:600px !important;
-}
 
 .dialog-close-button {
   position: fixed;
@@ -54,150 +15,7 @@ html, body {
   top: 19px;
 }
 
-$comment-avatar-dimensions: 30px;
-
-.comment-avatar {
-  display:inline-block;
-  width: $comment-avatar-dimensions;
-  height: $comment-avatar-dimensions;
-  font-size: 16px !important;
-  vertical-align: top !important;
-}
-
-.comment-message {
-  float:none !important;
-  display:inline-block;
-  margin: 0px 0px 12px 8px !important;
-  vertical-align: top !important;
-  max-width: calc(100% - 8px - #{$comment-avatar-dimensions}) !important;
-  word-wrap: break-word;
-  background: rgb(249, 249, 249) !important;
-}
-
-.comment-info-wrapper{
-  float:right;
-}
-
-.comment-date {
-  float:left;
-  color: lightgray;
-  margin: 9px 6px 0px 6px;
-
-}
-
-.inline-block{
-  display:inline-block;
-}
-.number-of-likes{
-  float:right;
-  margin: 4px 6px 0px 3px;
-}
-
-.comment-like-button {
-  font-size:9px !important;
-  height:20px;
-  min-width: 63px;
-  padding: 5px 16px;
-}
-
-.chat-view {
-
-  height:calc(100vh - 64px);
-  position:relative;
-
-  .chat-list {
-    min-height:100%;
-  }
-
-  .chat {
-
-    width:100%;
-    height:100%;
-    position:relative;
-    display:inline-flex;
-    flex-direction:column;
-
-    &.hidden {
-      display:none;
-    }
-  }
-
-  &:not(.chat-2-column) {
-    .chat {
-      position:absolute;
-      top:0;
-      left:0;
-      background-color:white;
-    }
-  }
 
 
-  &.chat-2-column {
-    .chat-list {
-      width:300px;
-      display:inline-block;
-      vertical-align:top;
-      border-right:1px solid lightgray;
-    }
 
-    .chat {
-      width:calc(100% - 300px);
-      vertical-align:top;
-    }
-  }
-}
 
-.chat {
-  $message-input-height: 64px;
-
-  .chat-message-list {
-    padding:0 20px;
-    background-color:#EEE;
-    overflow:hidden;
-    overflow-y:auto;
-    flex:1 1 calc(100% - #{$message-input-height})
-  }
-  .message-create {
-    $send-button-size: $message-input-height - 16px;
-    padding:8px;
-    background-color:white;
-    border-top:1px solid lightgray;
-    flex:0 0 auto;
-
-    .message-input {
-      width:calc(100% - #{$send-button-size});
-      display:inline-block;
-    }
-
-    .message-send {
-      width:$send-button-size;
-      height:$send-button-size;
-    }
-  }
-}
-
-.chat-message {
-  $message-radius: 16px;
-  max-width:350px;
-  padding:8px 16px;
-  margin:12px 16px 0 0;
-  border-radius:$message-radius;
-  border-top-left-radius:inherit;
-  background-color:white;
-  float:left;
-  clear:both;
-
-  &.chat-message--my-message {
-    margin-left:16px;
-    margin-right:0;
-    border-top-left-radius:$message-radius;
-    border-top-right-radius:inherit;
-    background-color:lightgreen;
-    float:right;
-  }
-
-  &:not(.chat-message--my-message) + .chat-message:not(.chat-message--my-message),
-    &.chat-message--my-message + .chat-message.chat-message--my-message {
-      margin-top:2px;
-    }
-}
