--- a/nodeJS/src/scss/custom.scss
+++ b/nodeJS/src/scss/custom.scss
@@ -2,6 +2,7 @@
 @import 'components/comment';
 @import 'profile';
 @import 'chat';
+@import 'notification';
 
 
 html, body {
@@ -13,6 +14,12 @@ html, body {
   position: fixed;
   right: 24px;
   top: 19px;
+}
+
+.icon-badge {
+  width: 16px;
+  height: 16px;
+  font-size: 8px;
 }
 
 
