Integrate feed api with frontend

--- a/socialMedia/templates/socialMedia/index.html
+++ b/socialMedia/templates/socialMedia/index.html
@@ -21,7 +21,12 @@
 <body>
   <!-- Declare variables for data to be retreived from Django here -->
   <script>
-    var activeUser = { id: {{user.pk}}, name: "{{user}}" };
+    var activeUser = {
+      id: {{user.pk}},
+      username: "{{user}}",
+      firstName: "{{user.first_name}}",
+      lastName: "{{user.last_name}}"
+    };
     var csrf_token= '{{ csrf_token }}';
   </script>
   <div id="app">
