--- a/socialMedia/templates/registration/signup.html
+++ b/socialMedia/templates/registration/signup.html
@@ -8,7 +8,7 @@
 	<meta name="HandheldFriendly" content="true"/>
 	<meta name="MobileOptimized" content="width" />
 	<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no, width=device-width" />
-  <title>Social Media - Login</title>
+  <title>Social Media - Signup</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/app.bundle.css' %}" type="text/css" />
@@ -16,11 +16,15 @@
 </head>
 
 <body>
-  <h2>Sign up</h2>
-  <form method="post">
+  <!-- Declare variables for data to be retreived from Django here -->
+  <script>
+    var registrationType = "signup";
+  </script>
+  <div id="app">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Sign up</button>
-  </form>
+  </div>
+
+  <script src="{% static 'js/registration.bundle.js' %}"></script>
 </body>
 </html>
