--- a/socialMedia/templates/registration/signup.html
+++ b/socialMedia/templates/registration/signup.html
@@ -19,12 +19,10 @@
   <!-- Declare variables for data to be retreived from Django here -->
   <script>
     var registrationType = "signup";
+    var csrf_token= '{{ csrf_token }}';
   </script>
   <div id="app">
-    {% csrf_token %}
-    {{ form.as_p }}
   </div>
-
   <script src="{% static 'js/registration.bundle.js' %}"></script>
 </body>
 </html>
