--- a/nodeJS/src/scss/custom.scss
+++ b/nodeJS/src/scss/custom.scss
@@ -12,6 +12,27 @@ html, body {
   margin:0;
 }
 
+.loading {
+  display:block;
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  border: 2px solid grey;
+  border-left-color: transparent;
+  animation-name: loading;
+  animation-iteration-count: infinite;
+  animation-duration: 1s;
+  position:absolute;
+  left:50%;
+  top:50%;
+  transform: translate(-50%, -50%);
+}
+
+@keyframes loading {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+
 
 .dialog-close-button {
   position: fixed;
