add links to post titles and avatars, fix bug in profile title

--- a/nodeJS/src/scss/custom.scss
+++ b/nodeJS/src/scss/custom.scss
@@ -40,6 +40,11 @@ html, body {
   top: 19px;
 }
 
+.link-no-styling {
+  text-decoration: none;
+  color: inherit;
+}
+
 .icon-badge {
   width: 16px;
   height: 16px;
