create shared post, add links to comment

--- a/nodeJS/src/scss/custom.scss
+++ b/nodeJS/src/scss/custom.scss
@@ -40,9 +40,10 @@ html, body {
   top: 19px;
 }
 
-.link-no-styling {
+.link-styling {
   text-decoration: none;
   color: inherit;
+  font-weight: bold;
 }
 
 .icon-badge {
