bug fixes on profile picture

--- a/nodeJS/src/scss/profile.scss
+++ b/nodeJS/src/scss/profile.scss
@@ -132,4 +132,8 @@ $profile-margin-between-elements: 20px;
 
 .edit-profile-dialog {
   width:400px;
+
+  .profile-picture-file-textfield {
+    margin-left:8px;
+  }
 }
