Finish chat working with websockets

--- a/nodeJS/src/scss/chat.scss
+++ b/nodeJS/src/scss/chat.scss
@@ -98,4 +98,8 @@
     &.chat-message--my-message + .chat-message.chat-message--my-message {
       margin-top:2px;
     }
+
+  &:last-child {
+    margin-bottom:10px;
+  }
 }
