fix send button

--- a/nodeJS/src/scss/components/feed.scss
+++ b/nodeJS/src/scss/components/feed.scss
@@ -40,6 +40,10 @@
   float: right;
 }
 
+.post-send {
+  margin: 0!important;
+}
+
 /* from here the styling is of ShareDialog */
 .share-dialog {
   width: 600px;
