--- a/nodeJS/src/scss/components/comment.scss
+++ b/nodeJS/src/scss/components/comment.scss
@@ -15,6 +15,10 @@ $comment-avatar-dimensions: 30px;
   width:600px !important;
 }
 
+.comment-send{
+  margin: 0!important;
+}
+
 .comment-avatar {
   display:inline-block;
   width: $comment-avatar-dimensions;
